--- a/public/singupcss.css
+++ b/public/singupcss.css
@@ -1,11 +1,10 @@
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             background-color: #f5f5f5;
             text-align: center;
             padding: 50px;
             margin: 0;
             padding: 0;
-            height: 100%;
         }
 
         .singup-container {
@@ -18,15 +17,34 @@
             justify-content: center;
             align-items: center;
         }
+        select{
+            font-family: 'Poppins', sans-serif;
+            width: 500px;
+            padding: 10px;
+            border-radius: 8px;
+            background-color: transparent;
+            background-color: white;
+            border: 1px solid #ccc; /* Example border */
+        }
 
         h3 {
             font-size: small;
             color: #000080;
             text-align-last: right;
         }
+        h2{
+            margin: 0%;
+        }
+        h6{
+            font-size: smaller;
+            margin: 0%;
+            margin-bottom: 10px;
+            color: gray;
+        }
 
         input[type="text"],
         input[type="password"] {
+            font-family: 'Poppins', sans-serif;
             width: 100%;
             padding: 12px 20px;
             margin: 8px 0;
@@ -37,6 +55,7 @@
         }
 
         input[type="submit"] {
+            font-family: 'Poppins', sans-serif;
             width: 100%;
             background-color: #007bff;
             color: white;
