--- a/views/course.ejs
+++ b/views/course.ejs
@@ -29,7 +29,7 @@
                 <h3>Course details</h3>
             </div>
             <div class="feature-card major-detail">
-                <h3 id="course-detail-title"> Course detail</h3>
+                <h3 id="course-detail-title">Select a course</h3>
                 <h5 id="course-detail"></h5>
             </div>
             <input type="submit" id="enroll" value="Enroll in the course" class="enroll">
