Connect backend and front end for Calendar screen

--- a/views/course.ejs
+++ b/views/course.ejs
@@ -131,7 +131,7 @@
                     return data.text()
                 })
                 .catch((error) => {
-                    console.error('jpr Could not send course title:', error);
+                    console.error('Could not send course title:', error);
                 });
         }
     </script>
