--- a/public/community.css
+++ b/public/community.css
@@ -1,40 +1,67 @@
-
-.parent-container-community{
+.parent-container-community {
     display: flex;
+    flex-direction: row;
 }
 
-.left-container-community{
+.h4{
+    margin: 0%;
+}
+.feature-card.chat-box {
+    height: 500px;
+    height: 50%;
+    margin-bottom: 10px;
+    color: gray;
+    background-color: white;
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+}
+
+.single-comment{
+    width: 1000px;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 20px;
+}
+
+.profiel-empty{
+    width: 50px;
+    height: 50px;
+    object-fit: contain;
+    margin-right: 10px;
+
+}
+
+.left-container-community {
     margin: 5px;
 }
 
-.right-container-community{
+.right-container-community {
     margin: 5px;
+    display: flex;
+    flex-direction: column;
 }
 
-.feature-card.community{
+.feature-card.community {
     border: 2px solid #ddd;
     height: 100vh;
+    background-color: white;
 }
 
-.enroll{
+.enroll {
     font-family: 'Poppins', sans-serif;
 }
 
-.community-detail{
-    height: 70vh;
+.community-detail {
+    display: flex;
+    flex-direction: column;
 }
 
-.feature-card.community-post-box{
+.feature-card.community-post-box {
     height: 100px;
     width: 1100px;
     font-family: 'Poppins', sans-serif;
     text-align: left;
-}
-
-.feature-card.chat-box{
-    height: 500px;
-    margin-bottom: 10px;
-    color: gray;
 }
 
 .community-list {
@@ -53,7 +80,8 @@
     border: 2px solid #ddd;
     border-radius: 10px;
 }
-.chat-container{
+
+.chat-container {
     display: flex;
 }
 
@@ -71,3 +99,27 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #0069d9;
 }
+
+#community-coursetitle {
+    color: gray;
+}
+
+#community-course-list li {
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+
+#community-course-list li:hover {
+    color: #0069d9;
+}
+
+.name-comment-div{
+    display: flex;
+    flex-direction: row;
+}
+
+.comment-owner{
+    margin-left: 10px;
+    color: #0069d9;
+}
+
